# smve

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ]  _typos.toml  build.rs  commitlint.config.js  package-lock.json  package.json
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: build-and-test.yml  checks.yml  ci.yml  commitlint.yml  report_ci.yml  rustfmt-pullreq.yml  rustfmt.yml  safety.yml  scheduled.yml  test.yml
crates/file_bundle_cli/: Cargo.toml
crates/file_bundle_cli/src/: main.rs
crates/lib_file_bundle/: Cargo.toml
crates/lib_file_bundle/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: graphics.rs  lib.rs
crates/ruxel_macros/: Cargo.toml
crates/smve_asset_pack/: Cargo.toml  _typos.toml
crates/smve_asset_pack/docs/specification/: v1.md
crates/smve_asset_pack/src/: lib.rs
crates/smve_asset_pack/src/pack_io/: mod.rs  utils.rs
crates/smve_asset_pack/src/pack_io/common/: mod.rs
crates/smve_asset_pack/src/pack_io/compiling/: compile_steps.rs  errors.rs  mod.rs  utils.rs
crates/smve_asset_pack/src/pack_io/compiling/asset_processing/: mod.rs
crates/smve_asset_pack/src/pack_io/compiling/asset_processing/processors/: mod.rs  text.rs
crates/smve_asset_pack/src/pack_io/compiling/raw_assets/: mod.rs
crates/smve_asset_pack/src/pack_io/compiling/raw_assets/uncookers/: mod.rs  text.rs
crates/smve_asset_pack/src/pack_io/compiling/walk/: ignore_utils.rs  mod.rs
crates/smve_asset_pack/src/pack_io/compiling/walk/config/: glob_utils.rs  merge_utils.rs  mod.rs
crates/smve_asset_pack/src/pack_io/reading/: errors.rs  file_reader.rs  flags.rs  iter_dir.rs  mod.rs  read_steps.rs  utils.rs
crates/smve_asset_pack/src/pack_io/reading/async_read/: errors.rs  file_reader.rs  iter_dir.rs  mod.rs  read_steps.rs  utils.rs
crates/smve_asset_pack/src/pack_io/reading/async_read/pack_group/: mod.rs  serde.rs
crates/smve_asset_pack/src/pack_io/reading/pack_group/: mod.rs  serde.rs
crates/smve_asset_pack/src/util/: mod.rs  text_obfuscation.rs
crates/smve_asset_pack/tests/: test.rs  test_async.rs
crates/smve_asset_pack/tests/async/resources/asset_group_1/: builtin.txt  override.txt
crates/smve_asset_pack/tests/async/resources/asset_group_out/: pack2.smap  packs.toml
crates/smve_asset_pack/tests/async/resources/asset_group_override/: singular.txt
crates/smve_asset_pack/tests/async/resources/assets_full/compressed/: __config__.toml
crates/smve_asset_pack/tests/async/resources/assets_full/dir/subdir/: 3.txt
crates/smve_asset_pack/tests/async/resources/assets_full/test_uncookers/: __config__.toml
crates/smve_asset_pack/tests/common/: mod.rs
crates/smve_asset_pack/tests/resources/: built_in.smap  override1.smap  override2.smap  setup_for_groups.sh
crates/smve_asset_pack/tests/resources/asset_group_2/: override.txt
crates/smve_asset_pack/tests/resources/asset_group_built_in/: builtin.txt
crates/smve_asset_pack/tests/resources/asset_group_out/: pack1.smap  packs.toml
crates/smve_asset_pack/tests/resources/asset_group_override2/: singular.txt
crates/smve_asset_pack/tests/resources/assets_full/: __config__.toml  nR_1
crates/smve_asset_pack/tests/resources/assets_full/__unique__/: U_1.txt
crates/smve_asset_pack/tests/resources/assets_full/__unique__/subdir/: U_2.txt
crates/smve_asset_pack/tests/resources/assets_full/compressed/: __config__.toml  compressed.txt  uncompressed.txt.__config__.toml
crates/smve_asset_pack/tests/resources/assets_full/dir/: I_1.txt
crates/smve_asset_pack/tests/resources/assets_full/dir/subdir/: __ignore__
crates/smve_asset_pack/tests/resources/assets_full/dir/subdir/I_ignored_dir/: I_3.txt  __ignore__
crates/smve_asset_pack/tests/resources/assets_full/test_config_override/: C_compressed.txt  __config__.toml
crates/smve_asset_pack/tests/resources/assets_full/test_config_override/uncompressed/: uncompressed.txt
crates/smve_asset_pack/tests/resources/assets_full/test_processors/custom/e/: E_e.txt.__config__.toml
crates/smve_asset_pack/tests/resources/assets_full/test_processors/custom/z/: Z_z.txt.__config__.toml
crates/smve_asset_pack/tests/resources/assets_full/test_uncookers/: __config__.toml
crates/smve_asset_pack/tests/resources/assets_full/test_uncookers/custom/e/: E_e.txt.__config__.toml
crates/smve_asset_pack/tests/resources/assets_full/test_uncookers/custom/z/: Z_z.txt.__config__.toml
crates/smve_asset_pack/tests/resources/assets_full/test_uncookers/normal/: normal.txt
crates/smve_asset_pack/tests/sync/resources/: override1.smap  override2.smap  setup_for_groups.sh
crates/smve_asset_pack/tests/sync/resources/asset_group_out/: packs.toml
crates/smve_asset_pack/tests/sync/resources/assets_full/: __ignore__
crates/smve_asset_pack/tests/sync/resources/assets_full/test_uncookers/: __config__.toml
crates/smve_asset_pack_compiler/: Cargo.toml  test_uncook.sh
crates/smve_asset_pack_compiler/example_uncookers/: e_uncooker.lua
crates/smve_asset_pack_compiler/src/: main.rs  uncooker.rs
crates/smve_asset_pack_compiler/test_assets/: test.txt.__config__.toml
crates/smve_internal/: Cargo.toml
crates/smve_internal/src/: lib.rs
crates/smve_macros/: Cargo.toml  README.md
crates/smve_render/: Cargo.toml
crates/smve_render/src/: components.rs  lib.rs
crates/smve_render/src/render/: draw.rs
crates/vuxt_macros/: Cargo.toml
examples/: triangle.rs
icon/blender/: SMve Logo.blend  icon.blend  icon.blend1
icon/figma/: mac.fig
icon/gimp/: icon.xcf  icon_no_background.xcf
images/: icon.icns
scripts/: cloc.sh
scripts/img2rs/: img2rs.py  requirements.txt
src/: lib.rs  main.rs  plugins.rs
src/client/: mod.rs
src/client/camera/: mod.rs  systems.rs
src/common/: core.rs  log.rs  mod.rs  trace.rs
src/core/: ecs.rs  mod.rs
src/core/graphics/: adapter_selection_utils.rs  gpu_selection_utils.rs  mod.rs  resources.rs  systems.rs
src/core/window/: components.rs  events.rs  icon.rs  mod.rs  resources.rs  systems.rs
src/game/: mod.rs
src/game/camera/: mod.rs  systems.rs
src/plugins/: client.rs  mod.rs
(+36 files in other folders)
