[package]
name = "smve"
authors = ["ItsSunnyMonster"]
description = "A voxel engine written in Rust."
readme = "README.md"
repository = "https://github.com/smve-rs/smve"
keywords = ["voxel", "engine", "rust", "game", "open-source"]
categories = ["game-development", "graphics", "game-engines"]
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [
  ".github/",
  ".husky/",
  ".vscode/",
  ".idea/",
  "images/",
  "icon/",
  "scripts/",
  "commitlint.config.js",
  "package.json",
  "package-lock.json",
  "crates/",
]

[workspace]
members = ["crates/*"]

[lints.clippy]
type_complexity = "allow"
missing_docs_in_private_items = "deny"

[dependencies]
smve_internal = { path = "crates/smve_internal" }

[dev-dependencies]
bevy = "0.14.0"
