[package]
name = "smve"
authors = ["ItsSunnyMonster"]
description = "A voxel engine written in Rust."
readme = "README.md"
repository = "https://github.com/smve-rs/smve"
keywords = ["voxel", "engine", "rust", "game", "open-source"]
categories = ["game-development", "graphics", "game-engines"]
version = "0.2.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [
  ".github/",
  ".husky/",
  ".vscode/",
  ".idea/",
  "images/",
  "icon/",
  "scripts/",
  "commitlint.config.js",
  "package.json",
  "package-lock.json",
  "crates/",
]

[workspace]
members = ["crates/*"]

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"

[dependencies]
smve_asset_pack = { path = "crates/smve_asset_pack" }
smve_render = { path = "crates/smve_render" }

[dev-dependencies]
bevy = "0.14.1"
