[package]
name = "file_bundle_cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
console = "0.15.7"
indicatif = "0.17.7"
lib_file_bundle = { path="../lib_file_bundle" }
