[package]
name = "smve_asset_pack"
version = "0.2.0-dev"
edition = "2021"

[lints]
workspace = true

[dependencies]
blake3 = "1.5"
ignore = "0.4"
tempfile = "3.12"
tracing = "0.1"
snafu = "0.8"
indexmap = "2.4"
lz4 = "1.26"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
downcast-rs = "1.2"
merge = { git = "https://github.com/ItsSunnyMonster/merge.git", branch = "versions/0.1.1" }
glob = "0.3"
serde-tuple-vec-map = "1.0"
walkdir = "2.5"
pathdiff = "0.2"
async-fs = { version = "2.1", optional = true }
futures-lite = { version = "2.3", optional = true }
async-walkdir = { version = "2.0", optional = true }
async-tempfile = { version = "0.6", optional = true }
blocking = { version = "1.6", optional = true }
async-compat = { version = "0.2", optional = true }
cfg-if = "1.0"

[dev-dependencies]
env_logger = "0.11.5"
tracing-test = "0.2.5"
async-io = "2.3.4"

[features]
default = ["async_read", "bevy_integration"]
async_read = [
  "dep:async-fs",
  "dep:futures-lite",
  "dep:async-walkdir",
  "dep:async-tempfile",
  "dep:blocking",
  "dep:async-compat",
]
non_send_readers = []
bevy_integration = []
