[package]
name = "smve_asset_pack"
version = "0.2.0-dev"
edition = "2021"

[lints]
workspace = true

[dependencies]
blake3 = "1.5"
ignore = "0.4"
tracing = "0.1"
snafu = "0.8"
indexmap = { version = "2.5", features = ["serde"] }
lz4 = "1.26"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
downcast-rs = "1.2"
merge = { git = "https://github.com/ItsSunnyMonster/merge.git", branch = "versions/0.1.1" }
glob = "0.3"
serde-tuple-vec-map = "1.0"
pathdiff = { version = "0.2", features = ["camino"] }
async-fs = "2.1"
futures-lite = "2.3"
async-walkdir = "2.0"
async-tempfile = "0.6"
blocking = "1.6"
async-compat = "0.2"
cfg-if = "1.0"
lru = "0.12"
tempfile = "3.12"
#                                        serde1??? what???
camino = { version = "1.1", features = ["serde1"] }
bitflags = "2.6"

[dev-dependencies]
env_logger = "0.11.5"
tracing-test = "0.2.5"
async-io = "2.3.4"
assert2 = "0.3.15"

[features]
default = ["bevy_integration"]
non_send_readers = []
bevy_integration = []
