[package]
name = "smve_asset_pack_compiler"
version = "0.1.0"
edition = "2021"
description = "A simple CLI used to compiling assets into an asset pack file."

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
smve_asset_pack = { path = "../smve_asset_pack" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
wild = "2.2.1"
mlua = { version = "0.9.9", features = ["luajit52", "serialize"] }
serde = "1.0.209"
toml = "0.8.19"

[lints]
workspace = true
